--- a/pages/404.html
+++ b/pages/404.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MyPharm | Delivery</title>
+  <title>Homepage</title>
+  <title>MyPharm | 404 </title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
@@ -19,7 +20,7 @@
               </span>
           </div>
           <div class="col text-center header__logo">
-            <img src="./mypharmlogo.svg" alt="">
+            <img src="../images/logo.svg" alt="">
           </div>
           <div class="col">
             <div  class="text-end header__links">
@@ -121,103 +122,27 @@
       </nav>
 
       <!-- NEW NAVBAR FINISHED -->
-      <section class="container about-photo">
-         <h1>1440x120</h1>
-      </section>
 
-
-
-
-      <!-- Main parts -->
-      <div class="container delivery-main-box">
-        <div class="container delivery-main-box-1">
-          <h1>Доставка и оплата</h1>
+      <!-- Image -->
+      <section class="container no-found-page">
+        <div class="container no-found">
+          <p><strong>Страница не найдена</strong><br> Ой, мы не можем найти нужную вам страницу! <br>
+            Вы воспользовались недействительной ссылкой, или страница была удалена.</p>
+          <button>Вернуться к покупкам</button>
         </div>
-        <div class="container delivery-main-box-2 ">
-          <h1>Почему MyPharm.uz?</h1>
-        </div>
-        <div class="container delivery-main-box-3">
-          <div class="delivery-products-boxes">
-            <div class="delivery-products-box">
-              <div class="delivery-product-icon"></div>
-              <p>Воспользуйтесь поиском, чтобы найти необходимый товар</p>
-            </div>
-            <div class="delivery-products-box">
-              <div class="delivery-product-icon"></div>
-              <p>Выбранный товар добавьте в корзину</p>
-            </div>
-            <div class="delivery-products-box">
-              <div class="delivery-product-icon"></div>
-              <p>Заполните поля и завершите оформление заказа</p>
-            </div>
-            <div class="delivery-products-box">
-              <div class="delivery-product-icon"></div>
-              <p>Заберите товар любым удобным вам способом</p>
-            </div>
+        <div class="container error-page-404">
+          <div class="error-404">
+            <h6>404</h6>
+          </div>
+          <div class="error-message">
+            <p>ошибка</p>
           </div>
         </div>
-        <div class="container delivery-main-box-4 ">
-          <h1>Как оформить заказ по телефону?</h1>
-        </div>
-        <div class="container delivery-main-box-5">
-          <p>1. Свяжитесь с оператором. <br>
-            2. Сообщите оператору названия лекарств и/или товаров, которые хотите купить; <br>
-            3. Оператор проверит наличие в аптеке указанных наименований и сообщит Вам их цены; <br>
-            4. Согласившись с условиями, продиктуйте оператору свои контактные данные; <br>
-            5. Подтвердите заказ, попросите подготовить выбранные товары для самовывоза либо воспользуйтесь услугами доставки.</p>
-        </div>
+      </section> 
+      <!-- Image finished -->
 
-        <div class="container delivery-main-box-6">
-          
-        </div>
-        <div class="container delivery-main-box-6 ">
-          <h1 class="about-padding">Как оформить заказ на сайте?</h1>
-        </div>
-        <div class="container delivery-main-box-7">
-          <div class="delivery-images-boxes-1">
-            <div class="delivery-images-box">
-              <div class="delivery-images-box-photo">
-                фото инструкции 320x230
-              </div>
-              <p>1. Откройте сайт mypharm.uz</p>
-            </div>
-            <div class="delivery-images-box">
-              <div class="delivery-images-box-photo">
-                фото инструкции 320x230
-              </div>
-              <p>2. Выберите необходимые товары через форму поиска или в каталоге.</p>
-            </div>
-            <div class="delivery-images-box">
-              <div class="delivery-images-box-photo">
-                фото инструкции 320x230
-              </div>
-              <p>3. Нажмите "купить" и положите выбранные товары в корзину.</p>
-            </div>
-          </div>
-          <div class="delivery-images-boxes-1">
-            <div class="delivery-images-box">
-              <div class="delivery-images-box-photo">
-                фото инструкции 320x230
-              </div>
-              <p>4. Укажите в корзине нужное количество товаров и/или лекарств.</p>
-            </div>
-            <div class="delivery-images-box">
-              <div class="delivery-images-box-photo">
-                фото инструкции 320x230
-              </div>
-              <p>5. Заполните поля контактной информации и выберите способ покупки товаров и/или лекарств.</p>
-            </div>
-            <div class="delivery-images-box">
-              <div class="delivery-images-box-photo">
-                фото инструкции 320x230
-              </div>
-              <p>6. Убедившись в правильности данных, нажмите "оформить заказ".</p>
-            </div>
-          </div>
-        </div>
-      </div>
+      
 
-      <!-- Main parts finished -->
       <!-- Footer -->
       <footer class="footer">
         <div class="container footer-element max-width">
@@ -252,8 +177,8 @@
         <div class="network">
           <h1 class="footer-sizing">Мобильное приложение MyPharm</h1>
           <div class="logos">
-            <img src="./google_play.svg" alt="">
-            <img src="./appstore.png" alt="">
+            <img src="../images/google-play-logo.svg" alt="">
+            <img src="../images/appstore.png" alt="">
           </div>
           <p class="social-par">Мы в социальных сетях</p>
           <div class="socials">
