--- a/pages/section.html
+++ b/pages/section.html
@@ -18,7 +18,7 @@
               </span>
           </div>
           <div class="col text-center header__logo">
-            <img src="./mypharmlogo.svg" alt="">
+            <img src="../images/logo.svg" alt="">
           </div>
           <div class="col">
             <div  class="text-end header__links">
@@ -580,8 +580,8 @@
         <div class="network">
           <h1 class="footer-sizing">Мобильное приложение MyPharm</h1>
           <div class="logos">
-            <img src="./google_play.svg" alt="">
-            <img src="./appstore.png" alt="">
+            <img src="../images/google-play-logo.svg" alt="">
+            <img src="../images/appstore.png" alt="">
           </div>
           <p class="social-par">Мы в социальных сетях</p>
           <div class="socials">
