--- a/pages/about.html
+++ b/pages/about.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Homepage</title>
-  <title>MyPharm | 404 </title>
+  <title>MyPharm | About</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
@@ -20,7 +19,7 @@
               </span>
           </div>
           <div class="col text-center header__logo">
-            <img src="./mypharmlogo.svg" alt="">
+            <img src="../images/logo.svg" alt="">
           </div>
           <div class="col">
             <div  class="text-end header__links">
@@ -122,27 +121,88 @@
       </nav>
 
       <!-- NEW NAVBAR FINISHED -->
+      <section class="container about-photo">
+         <h1>1440x120</h1>
+      </section>
 
-      <!-- Image -->
-      <section class="container no-found-page">
-        <div class="container no-found">
-          <p><strong>Страница не найдена</strong><br> Ой, мы не можем найти нужную вам страницу! <br>
-            Вы воспользовались недействительной ссылкой, или страница была удалена.</p>
-          <button>Вернуться к покупкам</button>
+      <div class="container max-width container-arrow">
+        <p>Главная</p><span class="arrow"></span><p>О компании</p><span class="arrow"></span>
+      </div>
+
+      <!-- Main parts -->
+      <div class="container about-main-box">
+        <div class="container about-main-box-1">
+          <h1>О компании</h1>
         </div>
-        <div class="container error-page-404">
-          <div class="error-404">
-            <h6>404</h6>
+        <div class="container about-main-box-2 ">
+          <h1>О нас</h1>
+        </div>
+        <div class="container about-main-box-3">
+          <div class="about-product-title">
+            <p>ПАО «Аптечная сеть 36,6» - лидер в Московском регионе и одна из крупнейших аптечных сетей в стране. Компания существует почти три десятилетия, развивается и укрепляет свои позиции.</p>
           </div>
-          <div class="error-message">
-            <p>ошибка</p>
+          <div class="about-products-boxes">
+            <div class="about-products-box">
+              <div class="about-product-icon"></div>
+              <h6><strong>Найдите товар</strong></h6>
+              <p>Воспользуйтесь поиском, чтобы найти необходимый товар</p>
+            </div>
+            <div class="about-products-box">
+              <div class="about-product-icon"></div>
+              <h6><strong>Добавьте товар</strong></h6>
+              <p>Выбранный товар добавьте в корзину</p>
+            </div>
+            <div class="about-products-box">
+              <div class="about-product-icon"></div>
+              <h6><strong>Оформите заказ</strong></h6>
+              <p>Заполните поля и завершите оформление заказа</p>
+            </div>
+            <div class="about-products-box">
+              <div class="about-product-icon"></div>
+              <h6><strong>Получите заказ</strong></h6>
+              <p>Заберите товар любым удобным вам способом</p>
+            </div>
           </div>
         </div>
-      </section> 
-      <!-- Image finished -->
+        <div class="container about-main-box-4 ">
+          <h1>Миссия компании</h1>
+        </div>
+        <div class="container about-main-box-5">
+          <div class="about-paragraph">
+            <p>Основная наша ценность – это человек, его самочувствие и настроение. Каждый день мы работаем для того чтобы как можно больше людей в России могли позволить себе качественные лекарства, товары для красоты и здоровья, которые сделают жизнь легче, радостнее и приятнее.</p>
+          </div>
+          <div class="about-images-boxes">
+            <div class="about-images-box">фото аптеки 235х185</div>
+            <div class="about-images-box">фото аптеки 235х185</div>
+            <div class="about-images-box">фото аптеки 235х185</div>
+            <div class="about-images-box">фото аптеки 235х185</div>
+          </div>
+        </div>
+        <div class="container about-main-box-6 ">
+          <h1 class="about-padding">Наши преимущества</h1>
+        </div>
+        <div class="container about-main-box-7">
+            <p><strong>Качество</strong> 
+              В «Аптечной сети 36,6» качество возведено на уровень корпоративной идеологии. В компании существует специальное подразделение - Дирекция по фармацевтическому контролю, которое следит за соблюдением лицензионных требований к продукции, а значит, за тем, чтобы наши покупатели получали эффективные, безопасные и качественные препараты.
+            </p>
+            <p><strong>Цены на товары</strong>  
 
-      
+              В аптеках «36,6» регулярно проходят акции и действует бонусная программа, благодаря этому наши постоянные покупатели получают скидки на весь ассортимент.</p>
+            <p><strong> Ассортимент</strong> 
 
+              В наших аптеках и на нашем сайте вы найдете широчайший ассортимент лекарственных препаратов, БАДов, косметики, товаров для красоты и здоровья.</p>
+            <p><strong>Большое количество розничных аптек </strong>
+              Наши аптеки расположены по всему городу. Вы всегда можете узнать адрес ближайшего к вам аптечного пункта в нашем приложении или на сайте.</p>
+            <p><strong>Удобный поиск</strong>
+              На нашем сайте и в приложении вы легко найдете любой лекарственный препарат или косметический продукт по названию, производителю или действующему веществу.</p>
+            <p><strong>Бронирование</strong>
+              Бронирование через сервис 366.ru – это выгодные покупки с комфортом. Вы можете выбрать и заказать нужный вам товар онлайн или по телефону, а потом забрать его в той аптеке, где вам удобно.</p>
+            <p><strong>Сервис</strong>
+              Еще одно преимущество «36,6» – это высокий уровень сервиса. Приходя в наши аптеки, вы всегда можете рассчитывать на компетентную консультацию провизоров и фармацевтов, человеческое отношение и приветливую улыбку.</p>
+        </div>
+      </div>
+
+      <!-- Main parts finished -->
       <!-- Footer -->
       <footer class="footer">
         <div class="container footer-element max-width">
@@ -177,8 +237,8 @@
         <div class="network">
           <h1 class="footer-sizing">Мобильное приложение MyPharm</h1>
           <div class="logos">
-            <img src="./google_play.svg" alt="">
-            <img src="./appstore.png" alt="">
+            <img src="../images/google-play-logo.svg" alt="">
+            <img src="../images/appstore.png" alt="">
           </div>
           <p class="social-par">Мы в социальных сетях</p>
           <div class="socials">
