--- a/pages/main-search.html
+++ b/pages/main-search.html
@@ -7,8 +7,8 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
-  <link rel="stylesheet" href="./css/head-footer.css">
-  <link rel="stylesheet" href="./css/main-style.css">
+  <link rel="stylesheet" href="../css/head-footer.css">
+  <link rel="stylesheet" href="../css/main-style.css">
 </head>
 <body>
   <!-- Top - 1/layer - 1 -->
@@ -803,8 +803,8 @@
         <div class="network">
           <h1 class="footer-sizing">Мобильное приложение MyPharm</h1>
           <div class="logos">
-            <img src="./images/google-play-logo.svg" alt="">
-            <img src="./images/appstore.png" alt="">
+            <img src="../images/google-play-logo.svg" alt="">
+            <img src="../images/appstore.png" alt="">
           </div>
           <p class="social-par">Мы в социальных сетях</p>
           <div class="socials">
