divided into several components

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               </span>
           </div>
           <div class="col text-center header__logo">
-            <img src="../images/mypharmlogo.svg" alt="">
+            <img src="./images/logo.svg" alt="">
           </div>
           <div class="col">
             <div  class="text-end header__links">
