medicine card updated

--- a/pages/medicine-card-recipe.html
+++ b/pages/medicine-card-recipe.html
@@ -164,7 +164,27 @@
             </div>
             <button class="red">Рецептурный препарат</button>
           </div>
-          <div class="medicine-name-box-3"></div>
+          <div class="medicine-name-box-3">
+          <div class="medicine-price-top">
+            <p><span>Цена</span></p>
+            <p><span>В избранное</span></p>
+          </div>
+          <p class="price">11 111 сум / 11 111 за шт.</p>
+          <!-- New mini carousel -->
+          
+          <!-- New mini carousel finished -->
+          <div class="carousel-medicine-price"></div>
+          <p class="medicine-form">Посмотреть другие формы выпуска</p>
+          <div class="medicine-price-buttons">
+            <div class="medicine-quantity">
+              <div class="box-1">-</div>
+              <div class="box-2">1 шт.</div>
+              <div class="box-3">+</div>
+            </div>
+            <button class="medicine-buy">Купить</button>
+          </div>
+          </div>
+
         </div>
       </div>
 
@@ -194,9 +214,7 @@
             <li>Противопоказания </li>
           </ul>
           <p>Читать далее</p>
-
         </div>
-
       </div>
 
       <!-- carousel Analogi -->
@@ -453,16 +471,31 @@
       <!-- carousel Analogi finished -->
 
       <div class="container medicine-instruction-box max-width">
-
+        <p>Инструкция по применению</p>
+        <p>Показания <i class="fas fa-chevron-down"></i></p>
+        <p>Форма выпуска и состав <i class="fas fa-chevron-down"></i></p>
+        <p>Фармакологическое действие <i class="fas fa-chevron-down"></i></p>
+        <p>Фармакокинетика <i class="fas fa-chevron-down"></i></p>
+        <p>Режим дозирования <i class="fas fa-chevron-down"></i></p>
+        <p>Побочное действие <i class="fas fa-chevron-down"></i></p>
+        <p>Противопоказания <i class="fas fa-chevron-down"></i></p>
+        <p>При беременности и кормлении <i class="fas fa-chevron-down"></i></p>
+        <p>Применение у детей <i class="fas fa-chevron-down"></i></p>
+        <p>Применение при нарушениях функции почек <i class="fas fa-chevron-down"></i></p>
+        <p>Особые указания <i class="fas fa-chevron-down"></i></p>
+        <p>Передозировка <i class="fas fa-chevron-down"></i></p>
+        <p>Инструкция по применению <i class="fas fa-chevron-down"></i></p>
+        <p>Лекарственное взаимодействие <i class="fas fa-chevron-down"></i></p>
+        <p class="condition">Условия и сроки хранения <i class="fas fa-chevron-up"></i></p>
+        <p>Условия и сроки хранения Условия и сроки хранения Условия и сроки хранения Условия и сроки хранения Условия и сроки хранения Условия и сроки хранения Условия и сроки хранения Условия и сроки хранения Условия и сроки хранения Условия и сроки хранения Условия и сроки хранения Условия и сроки хранения Условия и сроки хранения Условия и сроки хранения Условия и сроки хранения Условия и сроки хранения Условия и сроки хранения Условия и сроки хранения Условия и сроки хранения Условия и сроки хранения Условия и сроки хранения Условия и сроки хранения Условия и сроки хранения </p>
       </div>
 
-      <!-- carousel Last seen -->
-
+      <!-- carousel lekarstvennie preparati -->
       <div class="container main-h1 max-width">
         <h1 class="sizing20">Недавно просмотренные</h1>
       </div>
       <div class="container carousel">
-        <div id="carouselExampleControls1" class="carousel slide" data-bs-ride="carousel">
+        <div id="carouselExampleControls2" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
               <section class="container max-width">
@@ -697,17 +730,17 @@
               </section>
             </div>
           </div>
-          <a class="carousel-control-prev" href="#carouselExampleControls1" role="button" data-bs-slide="prev">
+          <a class="carousel-control-prev" href="#carouselExampleControls2" role="button" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
           </a>
-          <a class="carousel-control-next" href="#carouselExampleControls1" role="button" data-bs-slide="next">
+          <a class="carousel-control-next" href="#carouselExampleControls2" role="button" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
           </a>
         </div>
       </div>
-      <!-- carousel Last seen finished -->
+      <!-- carousel lekarstvennie preparati finished -->
 
       <!-- Main parts finished -->
       <!-- Footer -->
