--- a/pages/medicine-card-order-norecipe.html
+++ b/pages/medicine-card-order-norecipe.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MyPharm | Medicine Card</title>
+  <title>MyPharm | Order No recipe Medicine Card</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
@@ -160,7 +160,7 @@
         </div>
           <div class="medicine-name-box-2">
             <p>Название лекарства</p>
-            <button class="green">В наличии</button>
+            <button class="blue">Предзаказ (3-5 дней)</button>
             <div class="medicine-name-details">
               <p><span class="medicine-manufacturer"></span> Производитель: <span class="light"> Название компании</span></p>
 
@@ -172,7 +172,6 @@
 
               <p><span class="medicine-pharm"></span> Фармакологическая группа: <span class="light"> Группа</span></p>
             </div>
-            <button class="red">Рецептурный препарат</button>
           </div>
           
           <div class="medicine-boxes-with-special-offer">
