Added medicine cards

--- a/pages/medicine-card-norecipe.html
+++ b/pages/medicine-card-norecipe.html
@@ -175,10 +175,11 @@
           </div>
           
           <div class="medicine-boxes-with-special-offer">
-            <div class="container special-offer-logo">
+            <!-- <div class="container special-offer-logo">
               <p>Выгодное предложение!</p> 
-            </div>
-          <div class="medicine-name-box-3">
+            </div> -->
+          </div>
+          <div class="medicine-name-box-3 short-margin-top">
           <div class="medicine-price-top">
             <p><span>Цена</span></p>
             <p><span><i class="far fa-heart"></i>В избранное</span></p>
