--- a/pages/brand-medicine-card-notavailable-recipe.html
+++ b/pages/brand-medicine-card-notavailable-recipe.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MyPharm | Not available No recipe Medicine Card</title>
+  <title>MyPharm | Not available recipe Medicine Card</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
@@ -172,15 +172,16 @@
 
               <p><span class="medicine-pharm"></span> Фармакологическая группа: <span class="light"> Группа</span></p>
             </div>
+            <button class="red">Рецептурный препарат</button>
           </div>
           
           <div class="medicine-boxes-with-special-offer">
-            <!-- <div class="container special-offer-logo">
+            <div class="container special-offer-logo">
               <p>Выгодное предложение!</p> 
-            </div> -->
+            </div>
           </div>
-
-          <div class="medicine-name-box-3 short-margin-top">
+          
+          <div class="medicine-name-box-3">
           <div class="medicine-price-top">
             <p><span>Цена</span></p>
             <p><span><i class="far fa-heart"></i>В избранное</span></p>
