New files added

--- a/pages/brand-medicine-card-norecipe.html
+++ b/pages/brand-medicine-card-norecipe.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MyPharm | No recipe Medicine Card</title>
+  <title>MyPharm | Medicine Special Offer</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
@@ -173,7 +173,7 @@
               <p><span class="medicine-pharm"></span> Фармакологическая группа: <span class="light"> Группа</span></p>
             </div>
           </div>
-          
+          <!-- Special offer -->
           <div class="medicine-boxes-with-special-offer">
             <div class="container special-offer-logo">
               <p>Выгодное предложение!</p> 
@@ -296,13 +296,15 @@
         </div>
       </div>
 
-      <!-- carousel Analogi -->
+      
+
+      <!-- carousel Med texnika -->
 
       <div class="container main-h1 max-width">
-        <h1 class="sizing20">Аналоги</h1>
+        <h1 class="sizing20">Медицинская техника</h1>
       </div>
       <div class="container carousel">
-        <div id="carouselExampleControls2" class="carousel slide" data-bs-ride="carousel">
+        <div id="carouselExampleControls11" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
               <section class="container max-width">
@@ -537,17 +539,17 @@
               </section>
             </div>
           </div>
-          <a class="carousel-control-prev" href="#carouselExampleControls2" role="button" data-bs-slide="prev">
+          <a class="carousel-control-prev" href="#carouselExampleControls11" role="button" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
           </a>
-          <a class="carousel-control-next" href="#carouselExampleControls2" role="button" data-bs-slide="next">
+          <a class="carousel-control-next" href="#carouselExampleControls11" role="button" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
           </a>
         </div>
       </div>
-      <!-- carousel Analogi finished -->
+      <!-- carousel med texnika finished -->
 
       <div class="container medicine-instruction-box max-width">
         <p>Инструкция по применению</p>
