--- a/index.html
+++ b/index.html
@@ -125,10 +125,13 @@
 
       <!-- Image -->
       <section class="container image">
-        <h1>1440X220</h1>
+        <!-- <img src="./images/logo.svg" alt="Not Found"> -->
       </section> 
       <!-- Image finished -->
 
+
+
+      
       <!-- carousel Med texnika -->
 
       <div class="container main-h1 max-width">
