Modified main.css file and other html files

--- a/pages/medicine-special-offer.html
+++ b/pages/medicine-special-offer.html
@@ -306,7 +306,7 @@
       <!-- carousel Analogi -->
 
       <div class="container main-h1 max-width">
-        <h1 class="sizing20">Аналоги</h1>
+        <h1 class="font-size-20">Аналоги</h1>
       </div>
       <div class="container carousel">
         <div id="carouselExampleControls2" class="carousel slide" data-bs-ride="carousel">
@@ -579,7 +579,7 @@
        <!-- carousel Analogi -->
 
        <div class="container main-h1 max-width">
-        <h1 class="sizing20">Аналоги</h1>
+        <h1 class="font-size-20">Аналоги</h1>
       </div>
       <div class="container carousel medicine-carousel-margin">
         <div id="carouselExampleControls3" class="carousel slide" data-bs-ride="carousel">
