--- a/pages/brand-medicine-card-norecipe.html
+++ b/pages/brand-medicine-card-norecipe.html
@@ -301,7 +301,7 @@
       <!-- carousel Med texnika -->
 
       <div class="container main-h1 max-width">
-        <h1 class="sizing20">Медицинская техника</h1>
+        <h1 class="font-size-20">Медицинская техника</h1>
       </div>
       <div class="container carousel">
         <div id="carouselExampleControls11" class="carousel slide" data-bs-ride="carousel">
@@ -574,7 +574,7 @@
        <!-- carousel Analogi -->
 
        <div class="container main-h1 max-width">
-        <h1 class="sizing20">Аналоги</h1>
+        <h1 class="font-size-20">Аналоги</h1>
       </div>
       <div class="container carousel medicine-carousel-margin">
         <div id="carouselExampleControls3" class="carousel slide" data-bs-ride="carousel">
