--- a/pages/good-card-notavailable.html
+++ b/pages/good-card-notavailable.html
@@ -197,7 +197,7 @@
        <!-- carousel Analogi -->
 
        <div class="container main-h1 max-width">
-        <h1 class="sizing20">Недавно просмотренные</h1>
+        <h1 class="font-size-20">Недавно просмотренные</h1>
       </div>
       <div class="container carousel medicine-carousel-margin">
         <div id="carouselExampleControls3" class="carousel slide" data-bs-ride="carousel">
