--- a/pages/medicine-card-order-norecipe.html
+++ b/pages/medicine-card-order-norecipe.html
@@ -299,7 +299,7 @@
       <!-- carousel Analogi -->
 
       <div class="container main-h1 max-width">
-        <h1 class="sizing20">Аналоги</h1>
+        <h1 class="font-size-20">Аналоги</h1>
       </div>
       <div class="container carousel">
         <div id="carouselExampleControls2" class="carousel slide" data-bs-ride="carousel">
@@ -572,7 +572,7 @@
        <!-- carousel Analogi -->
 
        <div class="container main-h1 max-width">
-        <h1 class="sizing20">Аналоги</h1>
+        <h1 class="font-size-20">Аналоги</h1>
       </div>
       <div class="container carousel medicine-carousel-margin">
         <div id="carouselExampleControls3" class="carousel slide" data-bs-ride="carousel">
