Modified main.css file

--- a/pages/404.html
+++ b/pages/404.html
@@ -129,8 +129,8 @@
 <!-- /Categories -->
 
 <!-- Image -->
-<section class="container no-found-page">
-    <div class="container no-found">
+<section class="container not-found-page">
+    <div class="container not-found">
         <p><strong>Страница не найдена</strong><br> Ой, мы не можем найти нужную вам страницу! <br>
             Вы воспользовались недействительной ссылкой, или страница была удалена.</p>
         <button>Вернуться к покупкам</button>
