--- a/pages/section.html
+++ b/pages/section.html
@@ -534,8 +534,8 @@
             <p>Показать ещё</p>
         </div>
         <div class="stick"></div>
-        <div class="container smallbox-1">172x245</div>
-        <div class="container smallbox-2">172x245</div>
+        <div class="container small-box-1">172x245</div>
+        <div class="container small-box-2">172x245</div>
     </div>
 </div>
 <!-- Big box finished -->
