Added new files Articles/Offers and Products

--- a/pages/articles.html
+++ b/pages/articles.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
-    <title>MyPharm | 404 </title>
+    <title>MyPharm | Articles</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -13,8 +12,11 @@
           crossorigin="anonymous"/>
     <link rel="stylesheet" href="../css/shared.css">
     <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/other.css">
+
 </head>
 <body>
+<!-- Top - 1/layer - 1 -->
 <!-- Header -->
 <div class="container top-layer max-width">
     <div class="row align-items-center header">
@@ -128,23 +130,105 @@
 </nav>
 <!-- /Categories -->
 
-<!-- Image -->
-<section class="container not-found-page">
-    <div class="container not-found">
-        <p><strong>Страница не найдена</strong><br> Ой, мы не можем найти нужную вам страницу! <br>
-            Вы воспользовались недействительной ссылкой, или страница была удалена.</p>
-        <button>Вернуться к покупкам</button>
-    </div>
-    <div class="container error-page-404">
-        <div class="error-404">
-            <h6>404</h6>
-        </div>
-        <div class="error-message">
-            <p>ошибка</p>
-        </div>
-    </div>
+<!--Banner-->
+<section class="container-fluid text-center">
+    <img src="https://via.placeholder.com/1440x220?text=1440x220" class="img-fluid" alt="1440x220">
 </section>
-<!-- /Image  -->
+
+<!--/Banner-->
+
+<!--Arrow links-->
+<div class="container max-width container-arrow">
+    <p>Главная</p><span class="arrow"></span>
+    <p>Полезные статьи</p>
+</div>
+<!--/Arrow links-->
+
+
+<!-- Producers list -->
+<section class="container articles-main-box max-width p-0 mb-3">
+    <p>Полезные статьи</p>
+    <div class="articles-grid-container text-center padding-all-10 pt-3 ">
+        <div class="article-grid-item">
+            <img src="https://via.placeholder.com/235x160?text=235x160" class="img-fluid" alt="235x160">
+            <p>Название статьи Название статьи Название статьи Название статьи</p>
+        </div>
+        <div class="article-grid-item">
+            <img src="https://via.placeholder.com/235x160?text=235x160" class="img-fluid" alt="235x160">
+            <p>Название статьи Название статьи Название статьи Название статьи</p>
+        </div>
+        <div class="article-grid-item">
+            <img src="https://via.placeholder.com/235x160?text=235x160" class="img-fluid" alt="235x160">
+            <p>Название статьи Название статьи Название статьи Название статьи</p>
+        </div>
+        <div class="article-grid-item">
+            <img src="https://via.placeholder.com/235x160?text=235x160" class="img-fluid" alt="235x160">
+            <p>Название статьи Название статьи Название статьи Название статьи</p>
+        </div>
+        <div class="article-grid-item">
+            <img src="https://via.placeholder.com/235x160?text=235x160" class="img-fluid" alt="235x160">
+            <p>Название статьи Название статьи Название статьи Название статьи</p>
+        </div>
+        <div class="article-grid-item">
+            <img src="https://via.placeholder.com/235x160?text=235x160" class="img-fluid" alt="235x160">
+            <p>Название статьи Название статьи Название статьи Название статьи</p>
+        </div>
+        <div class="article-grid-item">
+            <img src="https://via.placeholder.com/235x160?text=235x160" class="img-fluid" alt="235x160">
+            <p>Название статьи Название статьи Название статьи Название статьи</p>
+        </div>
+        <div class="article-grid-item">
+            <img src="https://via.placeholder.com/235x160?text=235x160" class="img-fluid" alt="235x160">
+            <p>Название статьи Название статьи Название статьи Название статьи</p>
+        </div>
+        <div class="article-grid-item">
+            <img src="https://via.placeholder.com/235x160?text=235x160" class="img-fluid" alt="235x160">
+            <p>Название статьи Название статьи Название статьи Название статьи</p>
+        </div>
+        <div class="article-grid-item">
+            <img src="https://via.placeholder.com/235x160?text=235x160" class="img-fluid" alt="235x160">
+            <p>Название статьи Название статьи Название статьи Название статьи</p>
+        </div>
+        <div class="article-grid-item">
+            <img src="https://via.placeholder.com/235x160?text=235x160" class="img-fluid" alt="235x160">
+            <p>Название статьи Название статьи Название статьи Название статьи</p>
+        </div>
+        <div class="article-grid-item">
+            <img src="https://via.placeholder.com/235x160?text=235x160" class="img-fluid" alt="235x160">
+            <p>Название статьи Название статьи Название статьи Название статьи</p>
+        </div>
+        <div class="article-grid-item">
+            <img src="https://via.placeholder.com/235x160?text=235x160" class="img-fluid" alt="235x160">
+            <p>Название статьи Название статьи Название статьи Название статьи</p>
+        </div>
+        <div class="article-grid-item">
+            <img src="https://via.placeholder.com/235x160?text=235x160" class="img-fluid" alt="235x160">
+            <p>Название статьи Название статьи Название статьи Название статьи</p>
+        </div>
+        <div class="article-grid-item">
+            <img src="https://via.placeholder.com/235x160?text=235x160" class="img-fluid" alt="235x160">
+            <p>Название статьи Название статьи Название статьи Название статьи</p>
+        </div>
+        <div class="article-grid-item">
+            <img src="https://via.placeholder.com/235x160?text=235x160" class="img-fluid" alt="235x160">
+            <p>Название статьи Название статьи Название статьи Название статьи</p>
+        </div>
+    </div>
+
+</section>
+<button class="producers-add-more mb-3 container max-width" >
+    <span>1</span>
+    <span>2</span>
+    <span>3</span>
+</button>
+
+<p class="container max-width p-0">Статьи о здоровье на MyPharm.uz
+    На MyPharm.uz еженедельно размещаются актуальные статьи о болезнях и
+    медицинских препаратах. В нашей онлайн-аптеке Вы всегда сможете ознакомиться с
+    полезной информацией о здоровье, инструкциями и памятками для укрепления иммунитета.
+    Для MyPharm.uz важно, чтобы покупатели имели представление о распространенных заболеваниях
+    и способах сохранения здоровья. Поэтому мы публикуем только проверенные и актуальные материалы.</p>
+<!-- /Producers list -->
 
 <!-- Footer -->
 <footer class="footer">
