--- a/pages/brand-medicine-card-recipe.html
+++ b/pages/brand-medicine-card-recipe.html
@@ -73,7 +73,7 @@
       </section>
   <!-- Top -2/ layer -2 finished-->
 
-      <!-- NEW NAVBAR -->
+      <!-- company-name NAVBAR -->
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container max-width">
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -123,7 +123,7 @@
         </div>
       </nav>
 
-      <!-- NEW NAVBAR FINISHED -->
+      <!-- company-name NAVBAR FINISHED -->
 
       <!-- Main parts  -->
 
@@ -186,7 +186,7 @@
             <p><span><i class="far fa-heart"></i>В избранное</span></p>
           </div>
           <p class="price">11 111 сум / 11 111 за шт.</p>
-          <!-- New mini carousel -->
+          <!-- company-name mini carousel -->
           <div class="carousel-medicine-info">
             <div class="container carousel">
               <div id="carouselExampleControls1" class="carousel slide" data-bs-ride="carousel">
@@ -251,7 +251,7 @@
               </div>
             </div>
           </div>
-          <!-- New mini carousel finished -->
+          <!-- company-name mini carousel finished -->
           <div class="carousel-medicine-price"></div>
           <p class="medicine-form"> <span class="icon-tabulette"></span> Посмотреть другие формы выпуска</p>
           <div class="medicine-price-buttons">
@@ -881,7 +881,7 @@
         </div>
       </div>
       </footer>
-<!-- Footer finished -->
+<!-- /Footer-->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
 </html>
