--- a/pages/offers.html
+++ b/pages/offers.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
-    <title>MyPharm | 404 </title>
+    <title>MyPharm | Offers</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -13,8 +12,11 @@
           crossorigin="anonymous"/>
     <link rel="stylesheet" href="../css/shared.css">
     <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/other.css">
+
 </head>
 <body>
+<!-- Top - 1/layer - 1 -->
 <!-- Header -->
 <div class="container top-layer max-width">
     <div class="row align-items-center header">
@@ -128,24 +130,66 @@
 </nav>
 <!-- /Categories -->
 
-<!-- Image -->
-<section class="container not-found-page">
-    <div class="container not-found">
-        <p><strong>Страница не найдена</strong><br> Ой, мы не можем найти нужную вам страницу! <br>
-            Вы воспользовались недействительной ссылкой, или страница была удалена.</p>
-        <button>Вернуться к покупкам</button>
-    </div>
-    <div class="container error-page-404">
-        <div class="error-404">
-            <h6>404</h6>
+<!--Banner-->
+<section class="container-fluid text-center">
+    <img src="https://via.placeholder.com/1440x220?text=1440x220" class="img-fluid" alt="1440x220">
+</section>
+
+<!--/Banner-->
+
+<!--Arrow links-->
+<div class="container max-width container-arrow">
+    <p>Главная</p><span class="arrow"></span>
+    <p>Выгодные предложения</p>
+</div>
+<!--/Arrow links-->
+
+
+<!-- Offers list -->
+<section class="container offers-main-box max-width p-0 mb-3 mt-3">
+    <p>Выгодные предложения</p>
+    <div class="offers-grid-container text-center padding-all-10 pt-3 ">
+        <div class="offer-grid-item">
+            <img src="https://via.placeholder.com/310x310?text=310x310" class="img-fluid" alt="310x310">
         </div>
-        <div class="error-message">
-            <p>ошибка</p>
+        <div class="offer-grid-item">
+            <img src="https://via.placeholder.com/310x310?text=310x310" class="img-fluid" alt="310x310">
+        </div>
+        <div class="offer-grid-item">
+            <img src="https://via.placeholder.com/310x310?text=310x310" class="img-fluid" alt="310x310">
+        </div>
+        <div class="offer-grid-item">
+            <img src="https://via.placeholder.com/310x310?text=310x310" class="img-fluid" alt="310x310">
+        </div>
+        <div class="offer-grid-item">
+            <img src="https://via.placeholder.com/310x310?text=310x310" class="img-fluid" alt="310x310">
+        </div>
+        <div class="offer-grid-item">
+            <img src="https://via.placeholder.com/310x310?text=310x310" class="img-fluid" alt="310x310">
+        </div>
+        <div class="offer-grid-item">
+            <img src="https://via.placeholder.com/310x310?text=310x310" class="img-fluid" alt="310x310">
+        </div>
+        <div class="offer-grid-item">
+            <img src="https://via.placeholder.com/310x310?text=310x310" class="img-fluid" alt="310x310">
+        </div>
+        <div class="article-grid-item">
+            <img src="https://via.placeholder.com/310x310?text=310x310" class="img-fluid" alt="310x310">
         </div>
     </div>
 </section>
-<!-- /Image  -->
 
+<!-- /Offers list -->
+
+<p class="container max-width p-0">Скидки и акции на лекарства в Ташкенте
+    MyPharm.uz позволяет выгодно покупать лекарства. Достаточно выбрать нужные товары со скидкой, добавить их в корзину,
+    заказать и в скором времени ожидать доставки. Качественные и сертифицированные препараты теперь можно купить со
+    скидкой на MyPharm.uz. В онлайн-аптеке постоянно проходят акции на препараты и товары повышенного спроса.
+</p>
+<p class="container max-width p-0">Купить лекарства со скидкой
+    Закажите лекарства на MyPharm.uz и получите выгодное предложение! MyPharm.uz работает напрямую с
+    компаниями-производителями, поэтому качество продукции всегда на высшем уровне. Препараты и товары со скидкой можно
+    заказать на сайте MyPharm.uz в любое время. Доставка осуществляется по всем областям Республики Узбекистан.</p>
 <!-- Footer -->
 <footer class="footer">
     <div class="container footer-element max-width">
