--- a/pages/good-special-offer.html
+++ b/pages/good-special-offer.html
@@ -73,7 +73,7 @@
       </section>
   <!-- Top -2/ layer -2 finished-->
   
-      <!-- NEW NAVBAR -->
+      <!-- company-name NAVBAR -->
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container max-width">
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -123,7 +123,7 @@
         </div>
       </nav>
 
-      <!-- NEW NAVBAR FINISHED -->
+      <!-- company-name NAVBAR FINISHED -->
 
       <!-- Main parts  -->
      
@@ -511,7 +511,7 @@
         </div>
       </div>
       </footer>
-<!-- Footer finished -->
+<!-- /Footer-->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script> 
 </body>
 </html>
