Modified css and added new files

--- a/pages/brand-page.html
+++ b/pages/brand-page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyPharm | Section</title>
+    <title>MyPharm | Brand page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
@@ -128,16 +128,15 @@
 
 <!-- Image -->
 <section class="container-fluid text-center">
-    <img src="https://via.placeholder.com/1440x220?text=1440x220" class="img-fluid" alt="1440x220">
+    <img src="https://via.placeholder.com/1440x120?text=1440x220" class="img-fluid" alt="1440x220">
 </section>
 <!-- Image finished -->
 
 <!-- Small arrow portion -->
 <div class="container max-width container-arrow">
     <p>Главная</p><span class="arrow"></span>
-    <p>Аптечный каталог</p><span class="arrow"></span>
-    <p>Лекарственные препараты</p><span class="arrow"></span>
-    <p>Препараты от диабета</p>
+    <p>Производители</p><span class="arrow"></span>
+    <p>Название производителя</p><span class="arrow"></span>
 </div>
 <!-- Small arrow portion finished -->
 
@@ -146,13 +145,7 @@
     <div class="two-boxes">
         <div class="section-main-box">
             <div class="section-main-box-1">
-                <p>Препараты от диабета</p>
-                <div class="sorted">
-                    <p>Сортировать</p>
-                    <button class="btn btn-outline-secondary dropdown-toggle btn-dropdown section-btn" type="button"
-                            aria-expanded="false"></i>По цене: самые дешевые
-                    </button>
-                </div>
+                <p>Название производителя</p>
             </div>
             <!-- Main boxes taken from carousel -->
             <div class="section-main-box-2">
@@ -452,90 +445,66 @@
     </div>
     <div class="section-box-aside">
         <div class="container country">
-            <h6>Страна-производитель</h6>
+            <h6>Форма выпуска</h6>
             <div class="form-check">
 
                 <input class="form-check-input" type="checkbox" value="">
                 <label class="form-check-label">
-                    Австрия
-                </label><br>
-
-                <input class="form-check-input" type="checkbox" value="">
-                <label class="form-check-label">
-                    Австрия
+                    Аэрозоль
                 </label><br>
                 <input class="form-check-input" type="checkbox" value="">
                 <label class="form-check-label">
-                    Австрия
+                    Бальзам
                 </label><br>
                 <input class="form-check-input" type="checkbox" value="">
                 <label class="form-check-label">
-                    Австрия
+                    Гель
                 </label><br>
                 <input class="form-check-input" type="checkbox" value="">
                 <label class="form-check-label">
-                    Австрия
+                    Жидкость
                 </label><br>
                 <input class="form-check-input" type="checkbox" value="">
                 <label class="form-check-label">
-                    Австрия
+                    Капсулы
                 </label><br>
             </div>
             <p>Показать ещё</p>
         </div>
         <div class="stick"></div>
         <div class="container country">
-            <h6>Страна-производитель</h6>
+            <h6>Действующее вещество</h6>
             <div class="form-check">
 
                 <input class="form-check-input" type="checkbox" value="">
                 <label class="form-check-label">
-                    Австрия
+                    Будесонид
                 </label><br>
 
                 <input class="form-check-input" type="checkbox" value="">
                 <label class="form-check-label">
-                    Австрия
+                    Метопролол
                 </label><br>
                 <input class="form-check-input" type="checkbox" value="">
                 <label class="form-check-label">
-                    Австрия
+                    Розувастатин
                 </label><br>
                 <input class="form-check-input" type="checkbox" value="">
                 <label class="form-check-label">
-                    Австрия
+                    Кандесартан
                 </label><br>
                 <input class="form-check-input" type="checkbox" value="">
                 <label class="form-check-label">
-                    Австрия
-                </label><br>
-                <input class="form-check-input" type="checkbox" value="">
-                <label class="form-check-label">
-                    Австрия
+                    Диклофенак
                 </label><br>
             </div>
             <p>Показать ещё</p>
         </div>
         <div class="stick"></div>
-        <div class="container country">
-            <h6>Отпуск без рецепта</h6>
-            <div class="form-check">
 
-                <input class="form-check-input" type="checkbox" value="">
-                <label class="form-check-label">
-                    Отпуск без рецепта
-                </label><br>
-
-                <input class="form-check-input" type="checkbox" value="">
-                <label class="form-check-label">
-                    Отпуск без рецепта
-                </label><br>
-            </div>
-            <p>Показать ещё</p>
-        </div>
         <div class="stick">
-        <img src="https://via.placeholder.com/172x245?text=172x245" class="img-fluid mb-2" alt="172x245">
-        <img src="https://via.placeholder.com/172x245?text=172x245" class="img-fluid" alt="172x245">
+            <img src="https://via.placeholder.com/172x245?text=172x245" class="img-fluid mb-2" alt="172x245">
+            <img src="https://via.placeholder.com/172x245?text=172x245" class="img-fluid" alt="172x245">
         </div>
     </div>
 </div>
