--- a/pages/about.html
+++ b/pages/about.html
@@ -260,8 +260,12 @@
         <div class="network">
             <h1 class="footer-sizing">Мобильное приложение MyPharm</h1>
             <div class="logos">
-                <img src="../images/google-play-logo.svg" alt="">
-                <img src="../images/appstore.png" alt="">
+                <button>
+                    <img src="../images/google-play-logo.svg" alt="">
+                </button>
+                <button>
+                    <img src="../images/appstore.png" alt="">
+                </button>
             </div>
             <p class="social-par">Мы в социальных сетях</p>
             <div class="socials">
