--- a/pages/brand-page.html
+++ b/pages/brand-page.html
@@ -441,7 +441,7 @@
                 </div>
             </div>
         </div>
-        <div class="section-add-more ">Показать ещё</div>
+        <button class="brand-page-add-more">Показать ещё</button>
     </div>
     <div class="section-box-aside">
         <div class="container country">
