--- a/pages/section.html
+++ b/pages/section.html
@@ -143,7 +143,7 @@
 
 <!-- Big box  -->
 <div class="container section-big-box max-width">
-    <div class="two-boxes">
+    <div>
         <div class="section-main-box">
             <div class="section-main-box-1">
                 <p>Препараты от диабета</p>
@@ -448,7 +448,7 @@
                 </div>
             </div>
         </div>
-        <div class="section-add-more ">Показать ещё</div>
+        <button class="section-add-more">Показать ещё</button>
     </div>
     <div class="section-box-aside">
         <div class="container country">
